# grain-128AEADv2

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  cobertura.xml  project.md  tarpaulin-report.html
.github/workflows/: coverage.yml  rust.yml
benches/: benches.rs
proptest-regressions/: grain_core.txt  utils.txt
src/: fsr.rs  grain_core.rs  lib.rs  main.rs  test_utils.rs  traits.rs  utils.rs
tests/: tests.rs  tests_feature.rs  tests_noalloc.rs  utils.rs
