[package]
name = "grain-128"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = { version = "0.6.0-rc.3", default-features = false }
zeroize = { version = "1.8", optional = true, default-features = false, features = ["derive"] }
num = "0.4"

[dependicies.num]
version = "0.4"
default-features = false

[features]
default = ["vec"]
vec = []
zeroize = ["dep:zeroize"]
alloc = ["aead/alloc"]
arrayvec = ["aead/arrayvec"]
getrandom = ["aead/getrandom"]
rand_core = ["aead/rand_core"]

[profile.release]
debug = true

[dev-dependencies]
proptest = "1.9.0"
